--- a/app/views/layouts/default.jade
+++ b/app/views/layouts/default.jade
@@ -3,6 +3,7 @@ html(lang='en', xmlns='http://www.w3.org/1999/xhtml', xmlns:fb='https://www.face
   include ../includes/head
   body
     .navbar.navbar-inverse.navbar-fixed-top(data-ng-include="'views/header.html'", data-role="navigation")
+    block banner
     section.content
       section.container
         block content
