--- a/public/css/core.css
+++ b/public/css/core.css
@@ -77,3 +77,21 @@ button.studypage {
 .smallBreak {
   padding-top: 15px;
 }
+
+
+/* header.jade  */
+header {
+    width: 100%; height: 150px;
+}
+
+#logo {
+    display: inline-block;
+    float: left;
+    margin: 25px 0px 0px 25px;
+}
+
+button#profile {
+    width: 50px; height: 50px;
+    background-color: #aaa;
+}
+
