--- a/app/views/layouts/default.jade
+++ b/app/views/layouts/default.jade
@@ -4,6 +4,8 @@ html(lang='en', xmlns='http://www.w3.org/1999/xhtml', xmlns:fb='https://www.face
   body
     include ../includes/header
     section.content
-      section.container
-        block content
+        include ../includes/breadcrumb
+        include ../includes/sidebar
+        section.container
+            block content
     include ../includes/foot
