--- a/app/views/includes/foot.jade
+++ b/app/views/includes/foot.jade
@@ -23,6 +23,9 @@ div#scripts
     script(type='text/javascript', src='/js/controllers/index.js')
     script(type='text/javascript', src='/js/controllers/header.js')
     script(type='text/javascript', src='/js/controllers/breadcrumb.js')
+    script(type='text/javascript', src='/js/controllers/index.js')
+
+
     script(type='text/javascript', src='/js/init.js')
 
     if (process.env.NODE_ENV == 'development')
