ui-router finally working via buttons

--- a/app/views/includes/sidebar.jade
+++ b/app/views/includes/sidebar.jade
@@ -1,4 +1,4 @@
-section.sidebar(ng-controller="sidebarCtl")
+section.sidebar(data-ng-controller="sidebarCtrl")
     nav#dashboard
         button(ui-sref="home") Dashboard
         button(ui-sref="subject-status") Record Status
