--- a/app/views/includes/foot.jade
+++ b/app/views/includes/foot.jade
@@ -20,10 +20,10 @@ div#scripts
     script(type='text/javascript', src='/js/services/menu.js')
 
     //Application Controllers
-    script(type='text/javascript', src='/js/controllers/index.js')
     script(type='text/javascript', src='/js/controllers/header.js')
     script(type='text/javascript', src='/js/controllers/breadcrumb.js')
     script(type='text/javascript', src='/js/controllers/index.js')
+    script(type='text/javascript', src='/js/controllers/sidebarCtrl.js')
 
 
     script(type='text/javascript', src='/js/init.js')
