routes to home view correctly

--- a/app/views/includes/foot.jade
+++ b/app/views/includes/foot.jade
@@ -16,7 +16,7 @@ div#scripts
     script(type='text/javascript', src='/js/filters.js')
 
     //Application Services
-    script(type='text/javascript', src='/js/services/global.js')
+    script(type='text/javascript', src='/js/services/authentication.js')
     script(type='text/javascript', src='/js/services/menu.js')
 
     //Application Controllers
