--- a/public/views/subject.status.client.view.html
+++ b/public/views/subject.status.client.view.html
@@ -1,43 +1,54 @@
 <section data-ng-controller="SubjectStatusController" class="content">
-  <side-bar></side-bar>
-
-  <table class="table table-striped">
-  	<theader>
-  		<tr>
-  			<th>Subject ID</th>
-  			<th>Reader ID</th>
-  			<th>Group</th>
-  			<th>Status</th>
-  		</tr>
-  	</theader>
-  	<tbody>
-  		<tr ng-repeat="subject in subjects">
-  			<td><button class="btn" ui-sref="subject-info">{{subject.id}}</button></td>
-  			<td>{{subject.reader_id}}</td>
-  			<td>{{subject.group}}</td>
-  			<td>{{subject.status}}</td>
-  		</tr>
- <!--Sample Data-->
- 		<tr>
- 			<td><button class="btn" ui-sref="subject-info">12345</button></td>
- 			<td>435235</td>
- 			<td>Group 1</td>
- 			<td>Incomplete</td>
- 		</tr>
- 		<tr>
- 			<td><button class="btn" ui-sref="subject-info">12765</button></td>
- 			<td>435236</td>
- 			<td>Control</td>
- 			<td>Complete</td>
- 		</tr>
- 		<tr>
- 			<td><button class="btn" ui-sref="subject-info">12370</button></td>
- 			<td>435230</td>
- 			<td>Group 1</td>
- 			<td>Unverified</td>
- 		</tr>
- <!-------->
-  	</tbody>
-  </table>
-
+  <side-bar></side-bar> 
+  <div class="well" style="height:75vh; overflow-y:scroll">
+    <div class="row">
+      <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+        <button class="btn" style="width:100%" ng-click="filterAll()">All</button>
+      </div>
+      <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+        <button class="btn" style="width:100%" ng-click="filterComplete()">Complete</button>
+      </div>
+      <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5">
+        <button class="btn" style="width:100%" ng-click="filterIncomplete()">Incomplete</button>
+      </div>
+    </div>
+    <table class="table table-striped">
+    	<thead>
+    		<tr>
+    			<th>Subject ID</th>
+    			<th>Reader ID</th>
+    			<th>Group</th>
+    			<th>Status</th>
+    		</tr>
+    	</thead>
+    	<tbody>
+    		<tr ng-repeat="subject in subjects">
+    			<td><button class="btn" style="background:transparent" ui-sref="subject-info">{{subject.id}}</button></td>
+    			<td>{{subject.reader_id}}</td>
+    			<td>{{subject.group}}</td>
+    			<td>{{subject.status}}</td>
+    		</tr>
+   <!--Sample Data-->
+   		<tr>
+   			<td><button class="btn" style="background:transparent" ui-sref="subject-info">12345</button></td>
+   			<td>435235</td>
+   			<td>Group 1</td>
+   			<td>Incomplete</td>
+   		</tr>
+   		<tr>
+   			<td><button class="btn" style="background:transparent" ui-sref="subject-info">12765</button></td>
+   			<td>435236</td>
+   			<td>Control</td>
+   			<td>Complete</td>
+   		</tr>
+   		<tr>
+   			<td><button class="btn" style="background:transparent" ui-sref="subject-info">12370</button></td>
+   			<td>435230</td>
+   			<td>Group 1</td>
+   			<td>Unverified</td>
+   		</tr>
+   <!-------->
+    	</tbody>
+    </table>
+  </div>
 </section>
