updated routes, renamed enroll and subject setup files

--- a/public/views/subject-register.html
+++ b/public/views/subject-register.html
@@ -1,6 +1,6 @@
-<section data-ng-controller="EnrollController" class="content">
+<section data-ng-controller="RegisterController" class="content">
   
-    <div id="enroll-form">
+    <div id="register-form">
       <form role="form">
         <!--Subject Contact-->
         <div align="center" class="form-group">
