--- a/app/views/includes/foot.jade
+++ b/app/views/includes/foot.jade
@@ -22,9 +22,11 @@ div#scripts
     //Application Controllers
     script(type='text/javascript', src='/js/controllers/header.js')
     script(type='text/javascript', src='/js/controllers/breadcrumb.js')
-    script(type='text/javascript', src='/js/controllers/index.js')
     script(type='text/javascript', src='/js/controllers/sidebarCtrl.js')
 
+    // View Controllers
+    script(type='text/javascript', src='/js/controllers/index.js')
+    script(type='text/javascript', src='/js/controllers/register.js')
 
     script(type='text/javascript', src='/js/init.js')
 
