fixed layout and cleaned up stylesheet

--- a/app/views/includes/sidebar.jade
+++ b/app/views/includes/sidebar.jade
@@ -1,9 +1,8 @@
-section.sidebar(data-ng-controller="sidebarCtrl")
-    nav#dashboard
-        button(ui-sref="home") Dashboard
-        button(ui-sref="subject-status") Record Status
-        button(ui-sref="subject-register") Subject Registration 
-        button(ui-sref="subject-setup") Subject Enrollment
-        button(ui-sref="subject-select") Search Records
-        button(ui-sref="calendar") Calendar
-        button(ui-sref="reports") Reports
+nav#sidebar(data-ng-controller="sidebarCtrl")
+    button(ui-sref="home") Dashboard
+    button(ui-sref="subject-status") Record Status
+    button(ui-sref="subject-register") Subject Registration 
+    button(ui-sref="subject-setup") Subject Enrollment
+    button(ui-sref="subject-select") Search Records
+    button(ui-sref="calendar") Calendar
+    button(ui-sref="reports") Reports
