--- a/app/views/includes/head.jade
+++ b/app/views/includes/head.jade
@@ -19,9 +19,9 @@ head
   meta(property='og:site_name', content='MEAN - A Modern Stack')
   meta(property='fb:admins', content='APP_ADMIN')
 
+  // include stylesheets
   link(rel='stylesheet', href='/lib/bootstrap/docs/assets/css/bootstrap.css')
-  //- link(rel='stylesheet', href='/lib/bootstrap/dist/css/bootstrap-responsive.css')
-  link(rel='stylesheet', href='/css/common.css')
+  link(rel='stylesheet', href='/css/core.css')
 
 
   //if lt IE 9
