--- a/public/css/core.css
+++ b/public/css/core.css
@@ -1,6 +1,7 @@
-.content {
-  margin-top: 50px;
-}
+/***************************/
+/* eReader core stylesheet*/
+/*************************/
+
 .undecorated-link:hover {
   text-decoration: none;
 }
@@ -18,54 +19,48 @@
 .ng-valid.ng-dirty {
   border-color: #78FA89;
 }
-.header-profile-image {
-  opacity: 0.8;
-  height: 28px;
-  width: 28px;
-  border-radius: 50%;
-  margin-right: 5px;
-}
-.open .header-profile-image,
-a:hover .header-profile-image {
-  opacity: 1;
-}
-.user-header-dropdown-toggle {
-  padding-top: 11px !important;
-  padding-bottom: 11px !important;
-}
 
 button.studypage {
   position: relative;
   bottom: 9px;
 }
 
+/* ********* */
+/* sidebar  */
+/* ******* */
+
+#sidebar {
+    float: left;
+    width: 15%;
+    margin-right: 5%;
+}
+
+#sidebar button {
+    display: block;
+    width: 100%;
+}
+
+/* ************* */
+/* END sidebar  */
+/* *********** */
+
+/*************/
+/* content  */
+/***********/
 .container {
-  position: relative;
-  padding: 0 5px 0 225px;
-  margin: 0 0 0 0;
-  width: 100%;
+  text-align: auto;
 }
 
-.sidebar {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  width: 220px;
-  background: #A0A0A0;
-  border-right: 1px solid #000;
-  padding-top: 55px;
+#breadcrumb {
+    display: inline-block;
 }
 
-.header {
-  margin: 0 0 0 0;
-  position: absolute;
+#content {
+  margin: 0px auto;
 }
 
-.content {
-  margin: 5px 0 5px 0;
-  width: 100%;
-
+#view-window {
+    width: 80%;
 }
 
 .section-tabs {
@@ -78,20 +73,33 @@ button.studypage {
   padding-top: 15px;
 }
 
+/*****************/
+/* END content  */
+/***************/
 
-/* header.jade  */
+/*****************/
+/* header*/
+/***************/
 header {
-    width: 100%; height: 150px;
+    width: 80%; height: 150px;
+    margin: 0px auto 25px auto;
+    position: relative;
 }
 
 #logo {
     display: inline-block;
-    float: left;
     margin: 25px 0px 0px 25px;
+    height: 130px;
 }
 
 button#profile {
     width: 50px; height: 50px;
     background-color: #aaa;
+    position: absolute;
+    right: 25px; bottom: 10px;
 }
+
+/*********************/
+/* END header.jade  */
+/*******************/
 
