full route to database is working, query on database is slightly off

--- a/app/views/includes/foot.jade
+++ b/app/views/includes/foot.jade
@@ -22,6 +22,7 @@ div#scripts
     script(type='text/javascript', src='/js/controllers/header.js')
     script(type='text/javascript', src='/js/controllers/breadcrumb.js')
     script(type='text/javascript', src='/js/controllers/sidebarCtrl.js')
+    script(type='text/javascript', src='/js/controllers/subject_search.js')
 
     // View Controllers
     script(type='text/javascript', src='/js/controllers/index.js')
