--- a/app/views/includes/sidebar.jade
+++ b/app/views/includes/sidebar.jade
@@ -6,3 +6,4 @@ nav#sidebar(data-ng-controller="sidebarCtrl")
     button(ui-sref="subject-select") Search Records
     button(ui-sref="calendar") Calendar
     button(ui-sref="reports") Reports
+    button(ui-sref="search") Search
