RM admin routes, was not needed
Setup error routing and fixed ui router to work for urls that are not found

Fixed issue with subject controller

Fixed index to be easier to read and have the page view setup correctly

--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -1,6 +1,7 @@
 extends layouts/default
 
 block content
-    section#view-window(data-ui-view)
-
-block sidebar
+    include ./includes/sidebar
+    section.container-fluid
+      include ./includes/breadcrumb
+      section#view-window(data-ui-view)
