--- a/app/views/layouts/default.jade
+++ b/app/views/layouts/default.jade
@@ -1,11 +1,7 @@
 doctype html
 html(lang='en', xmlns='http://www.w3.org/1999/xhtml', xmlns:fb='https://www.facebook.com/2008/fbml', itemscope='itemscope', itemtype='http://schema.org/Product')
   include ../includes/head
-  body
+  body.ng-cloak
     include ../includes/header
-    section.container
-        include ../includes/sidebar
-        section#content
-            include ../includes/breadcrumb
-            block content
+    block content
     include ../includes/foot
