Fixed a lot of the styling issues. Fixed the 'use strict' errors from grunt. Removed unused index.js.

--- a/app/views/includes/foot.jade
+++ b/app/views/includes/foot.jade
@@ -26,7 +26,7 @@ div#scripts
     // View Controllers
     script(type='text/javascript', src='/js/controllers/index.js')
     script(type='text/javascript', src='/js/controllers/register.js')
-
+    script(type='text/javascript', src='/js/controllers/home.client.controller.js')
     script(type='text/javascript', src='/js/init.js')
 
     if (process.env.NODE_ENV == 'development')
