--- a/app/views/includes/head.jade
+++ b/app/views/includes/head.jade
@@ -20,9 +20,10 @@ head
   meta(property='fb:admins', content='APP_ADMIN')
 
   // include stylesheets
-  link(rel='stylesheet', href='/lib/bootstrap/docs/assets/css/bootstrap.css')
+  link(rel='stylesheet', href='/lib/bootstrap/dist/css/bootstrap.css')
   link(rel='stylesheet', href='/css/core.css')
-
+  link(rel='stylesheet', href='/css/views/homepage.stylesheet.css')
+  link(rel='stylesheet', href='/css/views/Study.Overview.css')
 
   //if lt IE 9
     script(src='http://html5shim.googlecode.com/svn/trunk/html5.js')
