--- a/app/views/includes/breadcrumb.jade
+++ b/app/views/includes/breadcrumb.jade
@@ -1,10 +1,15 @@
 nav#breadcrumb(data-ng-controller="breadcrumbController")
-    select.form-control(name="Study", ng-model="current_study")
-        option(value="") Current Study
-        option(data-ng-repeat="study in studies", value="{{study}}") {{study}}
-    select.form-control(name="Group", ng-model="current_group")
-        option(value="") Current Group
-        option(ng-repeat="group in groups", value="{{group}}") {{group}}
-    select.form-control(name="Patient", ng-model="current_patient")
-        option(value="") Current Patient
-        option(ng-repeat="patient in patients", value="{{patient}}") {{patient}}
+    div(class="well")
+        div(class="row")
+            div(class="col-xs-4 col-sm-4 col-md-4 col-lg-4")
+                select.form-control(name="Study", ng-model="current_study")
+                    option(value="") Current Study
+                    option(data-ng-repeat="study in studies", value="{{study}}") {{study}}
+            div(class="col-xs-4 col-sm-4 col-md-4 col-lg-4")
+                select.form-control(name="Group", ng-model="current_group")
+                    option(value="") Current Group
+                    option(ng-repeat="group in groups", value="{{group}}") {{group}}
+            div(class="col-xs-4 col-sm-4 col-md-4 col-lg-4")
+                select.form-control(name="Patient", ng-model="current_patient")
+                    option(value="") Current Patient
+                    option(ng-repeat="patient in patients", value="{{patient}}") {{patient}}
