Fixed up the CSS for the sidebar.jade file. Fixed the breadcrumb size. Fixed columns for index.html

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -1,6 +1,6 @@
 <section data-ng-controller="HomeController" class="content">
     <div class="row">
-        <div class="panel panel-default col-md-offset-2 col-md-8 col-sm-offset-2 col-sm-8 col-xs-offset-2 col-xs-8">
+        <div class="panel panel-default col-md-8 col-sm-8 col-xs-8 col-lg-8">
             <div class="panel-body">
                 <button ng-repeat="study in studies" class="btn btn-default btn-block" ui-sref="study-info">
                     {{study.name}}
