--- a/app/views/includes/header.jade
+++ b/app/views/includes/header.jade
@@ -1,6 +1,6 @@
-header(data-ng-controller="HeaderController" style="margin:0, 0, 0, 10; background-color:BLACK; width:100%")
+header(data-ng-controller="HeaderController" style="margin:0, 0, 0, 0; background-color:#c0c0c0; border-bottom:solid 1px black; width:100%")
     img#logo(src="img/brand/eTectLogo.png", data-ui-sref="home" style="margin-top: 10px; margin-left:10px")
-    //button#profile(style="background-image: url({{authentication.user.profileImageURL}})")
+    button#profile(style="background-image: url({{authentication.user.profileImageURL}})")
     #menu-dropdown(collapse="!isCollapsed")
         span.icon-bar 
             a(data-ui-sref="settings.profile") Settings
