--- a/public/views/subject-register.html
+++ b/public/views/subject-register.html
@@ -165,7 +165,7 @@
                   <input name="Area_Code2" required="" type="text" placeholder="###" autocomplete="off" ng-model="areacode2" class="form-control"/>
                 </div>
                 <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-                  <input name="Secondary_Phone" required="" type="text" placeholder="##########" autocomplete="off" ng-model="phone2" class="form-control"/>
+                  <input name="Secondary_Phone" required="" type="text" placeholder="#######" autocomplete="off" ng-model="phone2" class="form-control"/>
                 </div>
               </div>
             </div>
@@ -203,8 +203,11 @@
                 <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
                   <t style="font-weight:bold">Phone:</t>
                 </div>
+                <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
+                  <input name="Contact_Area_Code2" required="" type="text" placeholder="###" autocomplete="off" ng-model="contact_areacode1" class="form-control"/>
+                </div>
                 <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5">
-                  <input name="R1_Phone" required="" type="text" placeholder="##########" autocomplete="off" ng-model="r1phone" class="form-control"/>
+                  <input name="R1_Phone" required="" type="text" placeholder="#######" autocomplete="off" ng-model="r1phone" class="form-control"/>
                 </div>
               </div>
             </div>
@@ -235,8 +238,11 @@
                 <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
                   <t style="font-weight:bold">Phone:</t>
                 </div>
+                <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
+                  <input name="Contact_Area_Code2" required="" type="text" placeholder="###" autocomplete="off" ng-model="contact_areacode2" class="form-control"/>
+                </div>
                 <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5">
-                  <input name="R2_Phone" required="" type="text" placeholder="##########" autocomplete="off" ng-model="r2phone" class="form-control"/>
+                  <input name="R2_Phone" required="" type="text" placeholder="#######" autocomplete="off" ng-model="r2phone" class="form-control"/>
                 </div>
               </div>
             </div>
