--- a/public/views/subject-register.html
+++ b/public/views/subject-register.html
@@ -23,15 +23,15 @@
             </div>
             <!--First Name-->
             <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
-              <input name="First_Name" required="required" type="text" placeholder="First Name" autocomplete="off" ng-model="information.firstname" class="form-control"/>
+              <input name="First_Name" required="required" type="text" onkeypress='return event.charCode >= 65 && event.charCode <= 90 || event.charCode >= 97 && event.charCode <= 122' placeholder="First Name" autocomplete="off" ng-model="information.firstname" class="form-control"/>
             </div>
             <!--Middle Initial-->
             <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
-              <input name="Middle_Initial" required="required" type="text" placeholder="MI" autocomplete="off" ng-model="information.middlename" class="form-control"/>
+              <input name="Middle_Initial" required="required" type="text" onkeypress='return event.charCode >= 65 && event.charCode <= 90 || event.charCode >= 97 && event.charCode <= 122' placeholder="MI" autocomplete="off" ng-model="information.middlename" class="form-control"/>
             </div>
             <!--Last Name-->
             <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 ">
-              <input name="Last_Name" required="required" type="text" placeholder="Last name" autocomplete="off" ng-model="information.lastname" class="form-control"/>
+              <input name="Last_Name" required="required" type="text" onkeypress='return event.charCode >= 65 && event.charCode <= 90 || event.charCode >= 97 && event.charCode <= 122' placeholder="Last name" autocomplete="off" ng-model="information.lastname" class="form-control"/>
             </div>
             <!--Suffix-->
             <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
@@ -45,7 +45,7 @@
               <option value="III">III</option>
               </select>
             </div>
-          
+            <br>
             <!--Gender-->
             <div class="radio">
               <label>
@@ -71,7 +71,7 @@
             </div>
             <!--City-->
             <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
-              <input name="City" required="" type="text" placeholder="City" autocomplete="off" ng-model="city1" class="form-control"/>
+              <input name="City" required="" type="text" onkeypress='return event.charCode >= 65 && event.charCode <= 90 || event.charCode >= 97 && event.charCode <= 122' placeholder="City" autocomplete="off" ng-model="city1" class="form-control"/>
             </div>
             <!--State-->
             <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
@@ -132,7 +132,7 @@
             </div>
             <!--Zipcode-->
             <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
-              <input name="Zipcode" required="" placeholder="Zipcode" autocomplete="off" ng-model="zipcode1" class="form-control"/>
+              <input name="Zipcode" required="" type="text" pattern=".{5}" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="Zipcode" autocomplete="off" ng-model="zipcode1" class="form-control"/>
             </div>
           </div><br>
           
@@ -144,10 +144,10 @@
                   <t style="font-weight:bold">Primary Phone:</t>
                 </div>
                 <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
-                  <input name="Area_Code1" required="" type="text" placeholder="###" autocomplete="off" ng-model="areacode1" class="form-control"/>
+                  <input name="Area_Code1" required="" type="text" pattern=".{3}" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="###" autocomplete="off" ng-model="areacode1" class="form-control"/>
                 </div>
                 <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-                  <input name="Primary_Phone" required="" type="text" placeholder="#######" autocomplete="off" ng-model="phone1" class="form-control"/>
+                  <input name="Primary_Phone" required="" type="text" pattern=".{7}" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="#######" autocomplete="off" ng-model="phone1" class="form-control"/>
                 </div>
               </div>
             </div>
@@ -162,10 +162,10 @@
                   <t style="font-weight:bold">Secondary Phone:</t>
                 </div>
                 <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
-                  <input name="Area_Code2" required="" type="text" placeholder="###" autocomplete="off" ng-model="areacode2" class="form-control"/>
+                  <input name="Area_Code2" required="" type="text" pattern=".{3}" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="###" autocomplete="off" ng-model="areacode2" class="form-control"/>
                 </div>
                 <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-                  <input name="Secondary_Phone" required="" type="text" placeholder="#######" autocomplete="off" ng-model="phone2" class="form-control"/>
+                  <input name="Secondary_Phone" required="" type="text" pattern=".{7}" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="#######" autocomplete="off" ng-model="phone2" class="form-control"/>
                 </div>
               </div>
             </div>
@@ -190,13 +190,13 @@
               </select>
             </div>
             <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
-              <input name="R1_First_Name" required="" type="text" placeholder="First name" autocomplete="off" ng-model="r1firstname" class="form-control"/>
+              <input name="R1_First_Name" required="" type="text" onkeypress='return event.charCode >= 65 && event.charCode <= 90 || event.charCode >= 97 && event.charCode <= 122' placeholder="First name" autocomplete="off" ng-model="r1firstname" class="form-control"/>
             </div>
             <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
-              <input name="R1_Middle_Initial" type="text" placeholder="MI" autocomplete="off" ng-model="r1middleinitial" class="form-control"/>
+              <input name="R1_Middle_Initial" type="text" onkeypress='return event.charCode >= 65 && event.charCode <= 90 || event.charCode >= 97 && event.charCode <= 122' placeholder="MI" autocomplete="off" ng-model="r1middleinitial" class="form-control"/>
             </div>
             <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
-              <input name="R1_Last_Name" required="" type="text" placeholder="Last name" autocomplete="off" ng-model="r1lastname" class="form-control"/>
+              <input name="R1_Last_Name" required="" type="text" onkeypress='return event.charCode >= 65 && event.charCode <= 90 || event.charCode >= 97 && event.charCode <= 122' placeholder="Last name" autocomplete="off" ng-model="r1lastname" class="form-control"/>
             </div>
             <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
               <div class="row">
@@ -204,10 +204,10 @@
                   <t style="font-weight:bold">Phone:</t>
                 </div>
                 <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
-                  <input name="Contact_Area_Code2" required="" type="text" placeholder="###" autocomplete="off" ng-model="contact_areacode1" class="form-control"/>
+                  <input name="Contact_Area_Code2" required="" type="text" pattern=".{3}" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="###" autocomplete="off" ng-model="contact_areacode1" class="form-control"/>
                 </div>
                 <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5">
-                  <input name="R1_Phone" required="" type="text" placeholder="#######" autocomplete="off" ng-model="r1phone" class="form-control"/>
+                  <input name="R1_Phone" required="" type="text" pattern=".{7}" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="#######" autocomplete="off" ng-model="r1phone" class="form-control"/>
                 </div>
               </div>
             </div>
@@ -225,13 +225,13 @@
               </select>
             </div>
             <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
-              <input name="R2_First_Name" required="" type="text" placeholder="First name" autocomplete="off" ng-model="r2firstname" class="form-control"/>
+              <input name="R2_First_Name" required="" type="text" onkeypress='return event.charCode >= 65 && event.charCode <= 90 || event.charCode >= 97 && event.charCode <= 122' placeholder="First name" autocomplete="off" ng-model="r2firstname" class="form-control"/>
             </div>
             <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
-              <input name="R2_Middle_Initial" type="text" placeholder="MI" autocomplete="off" ng-model="r2middleinitial" class="form-control"/>
+              <input name="R2_Middle_Initial" type="text" onkeypress='return event.charCode >= 65 && event.charCode <= 90 || event.charCode >= 97 && event.charCode <= 122' placeholder="MI" autocomplete="off" ng-model="r2middleinitial" class="form-control"/>
             </div>
             <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
-              <input name="R2_Last_Name" required="" type="text" placeholder="Last name" autocomplete="off" ng-model="r2lastname" class="form-control"/>
+              <input name="R2_Last_Name" required="" type="text" onkeypress='return event.charCode >= 65 && event.charCode <= 90 || event.charCode >= 97 && event.charCode <= 122' placeholder="Last name" autocomplete="off" ng-model="r2lastname" class="form-control"/>
             </div>
             <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
               <div class="row">
@@ -239,10 +239,10 @@
                   <t style="font-weight:bold">Phone:</t>
                 </div>
                 <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
-                  <input name="Contact_Area_Code2" required="" type="text" placeholder="###" autocomplete="off" ng-model="contact_areacode2" class="form-control"/>
+                  <input name="Contact_Area_Code2" required="" type="text" pattern=".{3}" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="###" autocomplete="off" ng-model="contact_areacode2" class="form-control"/>
                 </div>
                 <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5">
-                  <input name="R2_Phone" required="" type="text" placeholder="#######" autocomplete="off" ng-model="r2phone" class="form-control"/>
+                  <input name="R2_Phone" required="" type="text" pattern=".{7}" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="#######" autocomplete="off" ng-model="r2phone" class="form-control"/>
                 </div>
               </div>
             </div>
