Got the controller for the subject info page working again

--- a/app/views/includes/foot.jade
+++ b/app/views/includes/foot.jade
@@ -28,6 +28,7 @@ div#scripts
     script(type='text/javascript', src='/js/controllers/register.js')
     script(type='text/javascript', src='/js/controllers/home.client.controller.js')
     script(type='text/javascript', src='/js/init.js')
+    script(type='text/javascript', src='/js/controllers/subjectinfo.client.controller.js')
 
     if (process.env.NODE_ENV == 'development')
         //Livereload script rendered 
