--- a/public/views/subject-setup.html
+++ b/public/views/subject-setup.html
@@ -1,16 +1,16 @@
 <section data-ng-controller="subjectSetupController" class="content">
     
     <div class="row">
-        <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 col-sm-offset-2 col-xs-offset-2 col-md-offset-2 col-lg-offset-2">
+        <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1 col-sm-offset-3 col-xs-offset-3 col-md-offset-3 col-lg-offset-3">
             Subject ID :
         </div>
-        <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
             {{subjectID}}
         </div>
     </div>
     <br>
     <div class="row">
-        <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 col-sm-offset-2 col-xs-offset-2 col-md-offset-2 col-lg-offset-2">
+        <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1 col-sm-offset-3 col-xs-offset-3 col-md-offset-3 col-lg-offset-3">
             Subject Group :
         </div>
         <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
@@ -25,7 +25,7 @@
     </div>
     <br>
     <div class="row">
-        <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 col-sm-offset-2 col-xs-offset-2 col-md-offset-2 col-lg-offset-2">
+        <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1 col-sm-offset-3 col-xs-offset-3 col-md-offset-3 col-lg-offset-3">
             Phone Number :
         </div>
         <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
@@ -37,7 +37,7 @@
     </div>
     <br>
     <div class="row">
-        <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 col-sm-offset-2 col-xs-offset-2 col-md-offset-2 col-lg-offset-2">
+        <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1 col-sm-offset-3 col-xs-offset-3 col-md-offset-3 col-lg-offset-3">
             Reader ID :
         </div>
         <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
@@ -48,7 +48,7 @@
     </div>
     <br>
     <div class="row"> 
-        <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 col-sm-offset-2 col-xs-offset-2 col-md-offset-2 col-lg-offset-2">
+        <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1 col-sm-offset-3 col-xs-offset-3 col-md-offset-3 col-lg-offset-3">
             Start Date :
         </div>
         <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">                
@@ -59,7 +59,7 @@
     </div>
     <br>
     <div class="row">
-        <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 col-sm-offset-2 col-xs-offset-2 col-md-offset-2 col-lg-offset-2">
+        <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1 col-sm-offset-3 col-xs-offset-3 col-md-offset-3 col-lg-offset-3">
             End Date :
         </div>
         <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
@@ -70,7 +70,7 @@
     </div>
     <br>
 <!--NOT SURE IF NEED
-    <div class="well col-xs-6 col-sm-6 col-md-6 col-lg-6 col-sm-offset-2 col-xs-offset-2 col-md-offset-2 col-lg-offset-2" style="height:25vh; overflow-y:scroll">
+    <div class="well col-xs-6 col-sm-6 col-md-6 col-lg-6 col-sm-offset-3 col-xs-offset-3 col-md-offset-3 col-lg-offset-3" style="height:25vh; overflow-y:scroll">
         <table class="table table-striped">
             <thead><tr><th>Ingestion #</th><th>Ingestion Dates</th></tr></thead>
             <tbody>
@@ -86,4 +86,9 @@
         </table>    
     </div>
 -->
+    <div class="row">
+        <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1 col-sm-offset-3 col-xs-offset-3 col-md-offset-3 col-lg-offset-3">
+            <button class="btn btn-default" type="button" ng-click="save()">Save</button>
+        </div>
+    </div>
 </section>
